--- a/extra.bib
+++ b/extra.bib
@@ -1,3 +1,14 @@
+@inproceedings{Laemmel01,
+  author    = {Ralf L{\"{a}}mmel},
+  title     = "{Grammar Adaptation}",
+  booktitle = "{Proceedings of FME 2001 (International Symposium of Formal Methods Europe)}",
+  year      = {2001},
+  pages     = {550--570},
+  series    = {LNCS},
+  volume    = {2021},
+  publisher = {Springer},
+}
+
 @article{RoyCK09,
   author    = {Chanchal Kumar Roy and
                James R. Cordy and
