--- a/extra.bib
+++ b/extra.bib
@@ -60,7 +60,7 @@
   year      = {2007},
 }
 
-@incollection{ErwigW12,
+@incollection{ErwigW12b,
   author    = "Martin Erwig and Eric Walkingshaw",
   title     = "{Semantics-Driven DSL Design}",
   booktitle = "{Formal and Practical Aspects of Domain-Specific Languages: Recent Developments}",
@@ -89,4 +89,45 @@
   volume    = {30},
   number    = {6},
   year      = {2008},
+}
+
+@inproceedings{Wachsmuth07,
+  author    = {Guido Wachsmuth},
+  title     = "{Metamodel Adaptation and Model Co-adaptation}",
+  booktitle = "{{ECOOP} 2007 - Object-Oriented Programming, 21st European Conference, Proceedings}",
+  pages     = {600--624},
+  series    = {LNCS},
+  year      = {2007},
+  volume    = {4609},
+  publisher = {Springer},
+}
+
+@inproceedings{LorenzR11,
+  author    = {David H. Lorenz and
+               Boaz Rosenan},
+  title     = "{Cedalion: a language for language oriented programming}",
+  booktitle = "{Proceedings of the 26th Annual {ACM} {SIGPLAN} Conference on Object-Oriented Programming, Systems, Languages, and Applications, {OOPSLA} 2011, part of {SPLASH} 2011}",
+  year      = {2011},
+  pages     = {733--752},
+  publisher = {{ACM}},
+}
+
+@inproceedings{EconomopoulosKV09,
+  author    = {Giorgios Economopoulos and
+               Paul Klint and
+               Jurgen J. Vinju},
+  title     = "{Faster Scannerless {GLR} Parsing}",
+  booktitle = "{Compiler Construction, 18th International Conference, {CC} 2009, Proceedings}",
+  pages     = {126--141},
+  series    = {LNCS},
+  year      = {2009},
+  volume    = {5501},
+  publisher = {Springer},
+}
+
+@book{Bertin83,
+  author = "J. Bertin",
+  title  = "{Semiology of Graphics: Diagrams, Networks, Maps}",
+  year   = "1983",
+  publisher = "Madison, Wisconsin, USA: University of Wisconsin Press"
 }
