--- a/bib.tex
+++ b/bib.tex
@@ -235,7 +235,7 @@ The "Physics" of Notations: Toward a Scientific Basis for Constructing Visual No
 \item[Required concepts]\mbox{}\\
 visual language\item[Provided concepts]\mbox{}\\
 \item[Annotation]\mbox{}\\
-
+We quote from the paper: ``This paper defines a set of principles for designing cognitively effective visual notations: ones that are optimised for human understanding and problem solving. Together these form a design theory, called the Physics of Notations as it focuses on the physical (perceptual) properties of notations rather than their logical (semantic) properties. The principles were synthesised from theory and empirical evidence from a wide range of fields and rest on an explicit theory of how visual notations communicate. They can be used to evaluate, compare, and improve existing visual notations as well as to construct new ones. The paper identifies serious design flaws in some of the leading SE notations together with practical suggestions for improving them. It also showcases some examples of visual notation design excellence from SE and other fields.''
 \end{description}
 
 \illusection{Moody09}{%
